Extra Pages Added

--- a/src/pages/Restaurants/view-restaurants/view-restaurants.html
+++ b/src/pages/Restaurants/view-restaurants/view-restaurants.html
@@ -43,7 +43,7 @@
 
 
   <ion-fab right bottom>
-    <button ion-fab color="danger" navPush="AddRestaurantsPage">
+    <button ion-fab color="danger" >
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
