--- a/src/pages/Utility/home/home.html
+++ b/src/pages/Utility/home/home.html
@@ -13,7 +13,7 @@
 
 <ion-grid>
 <ion-row>
-<ion-col col-6>
+<!-- <ion-col col-6>
   <ion-card padding>
     <ion-card-content>
       <ion-item>
@@ -26,7 +26,7 @@
       </ion-item>
     </ion-card-content>
   </ion-card>
-</ion-col>
+</ion-col> -->
 
 </ion-row>
 </ion-grid>
