--- a/src/pages/Partners/partner-admins/partner-admins.html
+++ b/src/pages/Partners/partner-admins/partner-admins.html
@@ -11,7 +11,7 @@
     <ion-row>
       <ion-col col-4 >
   <ion-item no-lines class="content">
-  <h1 class="title" item-start>Partners</h1>
+  <h1 class="title" item-start>Walk IN Partners</h1>
   </ion-item>
   </ion-col>
   <ion-col col-6 push-2 >
