--- a/src/pages/Partners/partner-admin-add/partner-admin-add.html
+++ b/src/pages/Partners/partner-admin-add/partner-admin-add.html
@@ -1,13 +1,11 @@
-<!--
-  Generated template for the PartnerAdminAddPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>partnerAdminAdd</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Add Partner</ion-title>
+    <ion-buttons end>
+      <button ion-button clear icon-only (click)="close()">
+        <ion-icon name="md-close"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +13,29 @@
 
 <ion-content padding>
 
+  <ion-slides>
+    <ion-slide>
+  <ion-item  class="content"  >
+    <ion-label floating>Partner Name</ion-label>
+    <ion-input type="text" autofocus [(ngModel)]="Name" (ionChange)="capsName(Name)" ></ion-input>
+  </ion-item>
+
+  <ion-item class="content">
+    <ion-label floating>Partner Contact Number</ion-label>
+    <ion-input type="number" [(ngModel)]="Contact"></ion-input>
+  </ion-item>
+
+  <ion-item class="content">
+    <ion-label floating>Partner Email</ion-label>
+    <ion-input type="email" [(ngModel)]="Email" ></ion-input>
+  </ion-item>
+  
+  <ion-item class="content">
+    <ion-label floating>Extra Details</ion-label>
+    <ion-textarea [(ngModel)]="ExtraDetails"></ion-textarea>
+  </ion-item>
+
+  <button ion-button (click)="checkData()">Add Admin</button>
+  </ion-slide>
+  </ion-slides>
 </ion-content>
