--- a/src/pages/Partners/partner-admin-edit/partner-admin-edit.html
+++ b/src/pages/Partners/partner-admin-edit/partner-admin-edit.html
@@ -1,13 +1,9 @@
-<!--
-  Generated template for the PartnerAdminEditPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>partnerAdminEdit</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Add Partner</ion-title>
+    <ion-buttons end>
+      <button ion-button outline (click)="close()">Done</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +11,35 @@
 
 <ion-content padding>
 
+  <ion-card>
+    <ion-card-content>
+  <ion-item >
+    <ion-label floating>Partner Edit</ion-label>
+    <ion-input type="text" autofocus [(ngModel)]="Name" (ionChange)="capsName(Name)" ></ion-input>
+  </ion-item>
+
+  <ion-item >
+    <ion-label floating>Partner Contact Number</ion-label>
+    <ion-input type="number" [(ngModel)]="Contact"></ion-input>
+  </ion-item>
+
+  <ion-item >
+    <ion-label floating>Partner Email</ion-label>
+    <ion-input type="email" [(ngModel)]="Email" ></ion-input>
+  </ion-item>
+  
+  <ion-item >
+    <ion-label floating>Extra Details</ion-label>
+    <ion-textarea [(ngModel)]="ExtraDetails"></ion-textarea>
+  </ion-item>
+
+  <ion-item >
+    <ion-label floating>Password</ion-label>
+    <ion-textarea [(ngModel)]="Password"></ion-textarea>
+  </ion-item>
+
+
+  <button ion-button (click)="checkData()">Save</button>
+  </ion-card-content>
+  </ion-card>
 </ion-content>
