--- a/src/pages/Partners/partner-delete/partner-delete.html
+++ b/src/pages/Partners/partner-delete/partner-delete.html
@@ -2,7 +2,7 @@
     <ion-navbar color="danger">
       <ion-title>Delete Partner</ion-title>
       <ion-buttons end>
-        <button ion-button outline (click)="cancel()">CANCEL</button>
+        <button ion-button outline (click)="close()">CANCEL</button>
       </ion-buttons>
     </ion-navbar>
   
@@ -16,9 +16,9 @@
         <h2 ion-text color="primary" >Enter "{{partner.Name}}" to delete</h2>
         <ion-item class="content" >
           <ion-label floating>Partner Name</ion-label>
-          <ion-input type="text" (ionChange)="capsName(Name)" [(ngModel)]="pName" aotufocus ></ion-input>
+          <ion-input type="text" (ionChange)="capsName(pName)" [(ngModel)]="pName" autofocus ></ion-input>
         </ion-item>
-    <button ion-button block color="danger" [disabled]="pName!=partner.Name" (click)="checkData()">DELETE</button>
+    <button ion-button block color="danger" [disabled]="pName!=partner.Name" (click)="del()">DELETE</button>
     </ion-slide>
     </ion-slides>
   </ion-content>
