--- a/src/pages/Utility/home/home.html
+++ b/src/pages/Utility/home/home.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
 <ion-item no-lines class="content">
-<h1 class="title">HOME</h1>
+<h1 class="title">DASHBOARD</h1>
 </ion-item>
 
 <ion-grid>
