Homepage Widget Addition

--- a/src/pages/Utility/home/home.html
+++ b/src/pages/Utility/home/home.html
@@ -13,20 +13,34 @@
 
 <ion-grid>
 <ion-row>
-<!-- <ion-col col-6>
-  <ion-card padding>
+<ion-col col-2>
+  <ion-card>
     <ion-card-content>
-      <ion-item>
-        <ion-icon name="ios-person" class="iconsize" color="primary" item-start></ion-icon>
-        <h2>Total Users</h2>
-            </ion-item>
-            <ion-item class="mainCur">
-          <h1>{{totUsers}}</h1>
-          <h1>Users</h1>
-      </ion-item>
+      <p class="mNum">{{partners}}</p>
+      <p  class="mText">Partners</p>
     </ion-card-content>
   </ion-card>
-</ion-col> -->
+</ion-col>
+
+<ion-col col-2>
+  <ion-card>
+    <ion-card-content>
+      <p class="mNum">{{restaurants}}</p>
+      <p class="mText">Restaurants</p>
+    </ion-card-content>
+  </ion-card>
+</ion-col>
+
+<ion-col col-2>
+  <ion-card>
+    <ion-card-content>
+      <p class="mNum">{{playzones}}</p>
+      <p class="mText">Playzones</p>
+    </ion-card-content>
+  </ion-card>
+</ion-col>
+
+
 
 </ion-row>
 </ion-grid>
