--- a/src/pages/Partners/partner-admin-edit/partner-admin-edit.html
+++ b/src/pages/Partners/partner-admin-edit/partner-admin-edit.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Add Partner</ion-title>
+    <ion-title>Edit Partner</ion-title>
     <ion-buttons end>
       <button ion-button outline (click)="close()">Done</button>
     </ion-buttons>
