--- a/src/pages/Partner Playzones/PlayZones/delplayzone/delplayzone.html
+++ b/src/pages/Partner Playzones/PlayZones/delplayzone/delplayzone.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the UserAddNotificationsPage page.
+  Generated template for the DelplayzonePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>userAddNotifications</ion-title>
+    <ion-title>delplayzone</ion-title>
   </ion-navbar>
 
 </ion-header>
