--- a/src/pages/Partner Playzones/PlayZones/view-play-zone/view-play-zone.html
+++ b/src/pages/Partner Playzones/PlayZones/view-play-zone/view-play-zone.html
@@ -1,18 +1,61 @@
-<!--
-  Generated template for the ViewPlayZonePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>viewPlayZone</ion-title>
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-4 >
+  <ion-item no-lines class="content">
+  <h1 class="title" item-start>Play Zones</h1>
+  </ion-item>
+  </ion-col>
+  <ion-col col-6 push-2 >
+  <ion-searchbar item-end animated="true" placeholder="Search a Play Zone" 
+  [(ngModel)]="searchBar" (ionInput)="getItems(searchBar)"></ion-searchbar>
+  </ion-col>
+  </ion-row>
+  </ion-grid>
+  
+  <ion-grid>
+      <ion-row>
+        <ion-col col-3 *ngFor="let p of playZones | async ">
+          <ion-card>
+  
+            <ion-navbar class="titel" color="primary" >
+              <ion-title  >{{p.PlayZoneName}}</ion-title>
+              <ion-buttons end>
+                <button ion-button clear (click)="viewOptions($event,p)" icon-only >
+                  <ion-icon name="md-more"></ion-icon>
+                </button>
+              </ion-buttons>
+            </ion-navbar>
+          <ion-card-content>
+            <ion-item>
+              <ion-icon name="ios-jet" item-start color="primary"></ion-icon>
+              <p item-end > {{p.ProfitToLoyalPercentage}} %</p>
+            </ion-item>
+            <ion-item>
+              <ion-icon name="md-call" item-start color="primary"></ion-icon>
+              <p item-end > {{p.PlayZoneContact}} </p>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  
+
+
+  <ion-fab right bottom>
+    <button ion-fab color="danger" (click)="addPlayZone()" >
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
+
 
 </ion-content>
