--- a/src/pages/Partner Restaurants/Restaurants/view-restaurants/view-restaurants.html
+++ b/src/pages/Partner Restaurants/Restaurants/view-restaurants/view-restaurants.html
@@ -44,6 +44,14 @@
               <p item-end > {{r.RestaurantContact}} </p>
             </ion-item>
           </ion-card-content>
+          <ion-row class="btnTopDiv" >
+            <ion-col col-6 class="btnRightDiv" >
+              <button ion-button clear (click)="viewMenu(r)">View Menu</button>
+            </ion-col>
+            <ion-col col-6>
+              <button ion-button clear (click)="viewUsers(r)">View Users</button>
+            </ion-col>
+          </ion-row>
         </ion-card>
         </ion-col>
       </ion-row>
