--- a/src/pages/Utility/Notifications/notification-main/notification-main.html
+++ b/src/pages/Utility/Notifications/notification-main/notification-main.html
@@ -1,18 +1,30 @@
-<!--
-  Generated template for the NotificationMainPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>NotificationMain</ion-title>
+  <ion-navbar color="primary" >
+    <ion-title>Notifications</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6>
+        <ion-card color="primary" (click)="userNoti()" >
+          <ion-card-content>
+            <h1 class="cc">User Notifications</h1>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col col-6>
+        <ion-card color="secondary" (click)="vendorNoti()" >
+          <ion-card-content>
+            <h1 class="cc">Vendor Notifications</h1>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
+
