Food Categories Added

--- a/src/pages/Utility/home/home.html
+++ b/src/pages/Utility/home/home.html
@@ -13,6 +13,8 @@
 
 <ion-grid>
 <ion-row>
+
+
 <ion-col col-2>
   <ion-card>
     <ion-card-content>
@@ -27,6 +29,15 @@
     <ion-card-content>
       <p class="mNum">{{restaurants}}</p>
       <p class="mText">Restaurants</p>
+    </ion-card-content>
+  </ion-card>
+</ion-col>
+
+<ion-col col-2>
+  <ion-card>
+    <ion-card-content>
+      <p class="mNum">{{banners}}</p>
+      <p class="mText">Banners</p>
     </ion-card-content>
   </ion-card>
 </ion-col>
