--- a/src/pages/Food Categories/view-food-categories/view-food-categories.html
+++ b/src/pages/Food Categories/view-food-categories/view-food-categories.html
@@ -7,9 +7,19 @@
 </ion-header>
 
 <ion-content padding>
-<ion-item no-lines class="content">
-<h1 class="title">Food Categories</h1>
-</ion-item>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-4 >
+  <ion-item no-lines class="content">
+  <h1 class="title" item-start>Food Categories</h1>
+  </ion-item>
+  </ion-col>
+  <ion-col col-6 push-2 >
+  <ion-searchbar item-end animated="true" placeholder="Search a Restaurant" 
+  [(ngModel)]="searchBar" (ionInput)="searchFun(searchBar)"></ion-searchbar>
+  </ion-col>
+  </ion-row>
+  </ion-grid>
 
 <ion-grid>
   <ion-row>
