--- a/src/pages/Partner Restaurants/Restaurants/view-restaurants/view-restaurants.html
+++ b/src/pages/Partner Restaurants/Restaurants/view-restaurants/view-restaurants.html
@@ -23,7 +23,7 @@
   
   <ion-grid>
       <ion-row>
-        <ion-col col-3 *ngFor="let r of restaurants | async ">
+        <ion-col col-3 *ngFor="let r of restaurants ">
           <ion-card>
   
             <ion-navbar class="titel" color="primary" >
