--- a/src/pages/Users/user-balances/user-balances.html
+++ b/src/pages/Users/user-balances/user-balances.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title> User Restaurants </ion-title>
+    <ion-title> User Balances </ion-title>
     <ion-buttons end>
       <button ion-button outline (click)="close()">Done</button>
     </ion-buttons>
