--- a/src/pages/Users/users/users.html
+++ b/src/pages/Users/users/users.html
@@ -23,11 +23,11 @@
   
   <ion-grid>
       <ion-row>
-        <ion-col col-3 >
+        <ion-col col-3 *ngFor="let u of users" >
           <ion-card>
   
             <ion-navbar class="titel" color="primary" >
-              <ion-title  >u.Name</ion-title>
+              <ion-title  >{{u.Name}}</ion-title>
               <ion-buttons end>
                 <button ion-button clear (click)="viewOptions($event,u)" icon-only >
                   <ion-icon name="md-more"></ion-icon>
@@ -37,29 +37,14 @@
           <ion-card-content>
             <ion-item>
               <ion-icon name="md-mail" item-start color="primary"></ion-icon>
-              <p item-end > u.Email </p>
+              <p item-end > {{u.Email}} </p>
             </ion-item>
             <ion-item>
               <ion-icon name="md-call" item-start color="primary"></ion-icon>
-              <p item-end > u.Phone </p>
+              <p item-end > {{u.Phone}} </p>
             </ion-item>
           </ion-card-content>
 
-            <ion-col col-6 class="btnRightDiv" >
-              <button ion-button clear (click)="viewRestaurant(u)">View Restaurants</button>
-            </ion-col>
-
-            <ion-col col-6>
-              <button ion-button clear (click)="viewCart(u)">View Cart</button>
-            </ion-col>
-
-            <ion-col col-6 class="btnRightDiv" >
-              <button ion-button clear (click)="viewBalances(u)">View Balances</button>
-            </ion-col>
-
-            <ion-col col-6 class="btnRightDiv" >
-              <button ion-button clear (click)="viewBalances(u)">User Details</button>
-            </ion-col>
 
           </ion-card>
         </ion-col>
