--- a/src/pages/Utility/home/home.html
+++ b/src/pages/Utility/home/home.html
@@ -42,6 +42,14 @@
   </ion-card>
 </ion-col>
 
+<ion-col col-2>
+  <ion-card>
+    <ion-card-content>
+      <p class="mNum">{{fCats}}</p>
+      <p class="mText">Food Categories</p>
+    </ion-card-content>
+  </ion-card>
+</ion-col>
 
 
 
