--- a/src/pages/Food Categories/add-food-categories/add-food-categories.html
+++ b/src/pages/Food Categories/add-food-categories/add-food-categories.html
@@ -17,7 +17,7 @@
     <ion-card-content>
       <ion-item>
         <ion-label  floating>Category Name</ion-label>
-        <ion-input type="text" [(ngModel)]="name" autofocus ></ion-input>
+        <ion-input type="text" [(ngModel)]="name" (ionChange)="capsName(name)" autofocus ></ion-input>
       </ion-item>
 
 
