--- a/src/pages/Food Categories/view-food-categories/view-food-categories.html
+++ b/src/pages/Food Categories/view-food-categories/view-food-categories.html
@@ -16,19 +16,24 @@
   </ion-col>
   <ion-col col-6 push-2 >
   <ion-searchbar item-end animated="true" placeholder="Search a Restaurant" 
-  [(ngModel)]="searchBar" (ionInput)="searchFun(searchBar)"></ion-searchbar>
+  [(ngModel)]="searchbar" (ionInput)="getItems(searchbar)"></ion-searchbar>
   </ion-col>
   </ion-row>
   </ion-grid>
 
 <ion-grid>
   <ion-row>
-    <ion-col *ngFor="let c of cats | async" col-3  >
+    <ion-col *ngFor="let c of cats" col-3  class="main" >
       <ion-card>
         <ion-card-content>
           <ion-card-title>
             {{c.Name}}
           </ion-card-title>
+            <div class="editBtns">
+              <button ion-button color="danger" (click)="deleteCat(c)">
+                <ion-icon name="trash"></ion-icon>
+              </button>
+            </div>
         </ion-card-content>
       </ion-card>
     </ion-col>
