--- a/src/pages/Packages/packages/packages.html
+++ b/src/pages/Packages/packages/packages.html
@@ -16,7 +16,7 @@
   </ion-col>
   <ion-col col-6 push-2 >
   <ion-searchbar item-end animated="true" placeholder="Search a Restaurant" 
-  [(ngModel)]="searchBar" (ionInput)="searchFun(searchBar)"></ion-searchbar>
+  [(ngModel)]="searchBar" (ionInput)="getItems(searchBar)"></ion-searchbar>
   </ion-col>
   </ion-row>
   </ion-grid>
@@ -24,7 +24,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col col-3 *ngFor="let p of packages | async ">
+      <ion-col col-3 *ngFor="let p of packages">
         <ion-card>
 
           <ion-navbar class="titel" color="primary" >
