--- a/src/pages/Partners/partner-admins/partner-admins.html
+++ b/src/pages/Partners/partner-admins/partner-admins.html
@@ -16,7 +16,7 @@
   </ion-col>
   <ion-col col-6 push-2 >
   <ion-searchbar item-end animated="true" placeholder="Search a Partner" 
-  [(ngModel)]="search" ></ion-searchbar>
+  [(ngModel)]="searchBar" (ionInput)="getItems(searchBar)"></ion-searchbar>
   </ion-col>
   </ion-row>
   </ion-grid>
@@ -25,7 +25,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col col-3 *ngFor="let p of partners | async ">
+      <ion-col col-3 *ngFor="let p of partners">
         <ion-card>
 
           <ion-navbar class="titel" color="primary" >
