--- a/src/pages/Users/user-details/user-details.html
+++ b/src/pages/Users/user-details/user-details.html
@@ -1,13 +1,9 @@
-<!--
-  Generated template for the UserDetailsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>userDetails</ion-title>
+  <ion-navbar color="primary">
+    <ion-title> User Details </ion-title>
+    <ion-buttons end>
+      <button ion-button outline (click)="close()">Done</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
