--- a/src/pages/Users/user-options/user-options.html
+++ b/src/pages/Users/user-options/user-options.html
@@ -1,18 +1,15 @@
-<!--
-  Generated template for the UserOptionsPage page.
+<ion-col col-6 class="btnRightDiv" >
+    <button ion-button clear (click)="viewRestaurant()">View Restaurants</button>
+  </ion-col>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <ion-col col-6>
+    <button ion-button clear (click)="viewCart()">View Cart</button>
+  </ion-col>
 
-  <ion-navbar>
-    <ion-title>userOptions</ion-title>
-  </ion-navbar>
+  <ion-col col-6 class="btnRightDiv" >
+    <button ion-button clear (click)="viewBalances()">View Balances</button>
+  </ion-col>
 
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+  <ion-col col-6 class="btnRightDiv" >
+    <button ion-button clear (click)="viewDetails()">User Details</button>
+</ion-col>
