--- a/src/pages/Utility/home/home.html
+++ b/src/pages/Utility/home/home.html
@@ -36,6 +36,15 @@
 <ion-col col-2>
   <ion-card>
     <ion-card-content>
+      <p class="mNum">{{users}}</p>
+      <p class="mText">Users</p>
+    </ion-card-content>
+  </ion-card>
+</ion-col>
+
+<ion-col col-2>
+  <ion-card>
+    <ion-card-content>
       <p class="mNum">{{banners}}</p>
       <p class="mText">Banners</p>
     </ion-card-content>
