--- a/src/pages/Utility/login/login.html
+++ b/src/pages/Utility/login/login.html
@@ -10,14 +10,14 @@
 
           <ion-item>
             <ion-label color="whiter" fixed>Email</ion-label>
-            <ion-input type="email"  [(ngModel)]="email" autofocus ></ion-input>
+            <ion-input type="email" (keyup.enter)="checkData()"  [(ngModel)]="email" autofocus ></ion-input>
           </ion-item>
           <ion-item>
             <ion-label color="whiter" fixed>Password</ion-label>
-            <ion-input type="password"  [(ngModel)]="pass"></ion-input>
+            <ion-input type="password" (keyup.enter)="checkData()"  [(ngModel)]="pass"></ion-input>
           </ion-item>
 
-          <button ion-button block color="primary"  (click)="checkData()">Login</button>
+          <button ion-button color="primary"  (click)="checkData()">Login</button>
         </ion-card-content>
 
 
