--- a/src/pages/Utility/Notifications/notification-main/notification-main.html
+++ b/src/pages/Utility/Notifications/notification-main/notification-main.html
@@ -9,18 +9,37 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col col-6>
-        <ion-card color="primary" (click)="userNoti()" >
+      <ion-col col-5 offset-1 >
+        <ion-card>
           <ion-card-content>
-            <h1 class="cc">User Notifications</h1>
+            <ion-card-title>
+              <button ion-button color="primary" large clear icon-only>
+              <ion-icon name="ios-people"></ion-icon>
+              </button>
+              User Notifications
+            </ion-card-title>
           </ion-card-content>
+          <ion-item class="bot" >
+            <button ion-button (click)="userNoti()" large clear item-end>View
+              <ion-icon padding-left name="md-arrow-forward"></ion-icon>
+            </button>
+          </ion-item>
         </ion-card>
       </ion-col>
-      <ion-col col-6>
-        <ion-card color="secondary" (click)="vendorNoti()" >
+      <ion-col col-5>
+        <ion-card   >
           <ion-card-content>
-            <h1 class="cc">Vendor Notifications</h1>
+            <ion-card-title>
+              <button ion-button color="primary" large clear icon-only>
+              <ion-icon name="ios-contact"></ion-icon>
+              </button>
+              Vendor Notifications</ion-card-title>
           </ion-card-content>
+          <ion-item class="bot" >
+            <button (click)="vendorNoti()" ion-button large clear item-end>View
+              <ion-icon padding-left name="md-arrow-forward"></ion-icon>
+            </button>
+          </ion-item>
         </ion-card>
       </ion-col>
     </ion-row>
